@@ -12,6 +12,7 @@
 - Tweaks made to improve internal performance, stability, and reliability
 - Added a "screen saver" (simply blanks screen after 60 sec of no controller input)
 - Added an exit application button combination shortcut (SELECT + START)
+- Added an internal "retry system" designed to reduce failed transfers for small files
 - New git for v2.0 and later: http://git-hacks.com/openps3ftp
 
 [Version 1.5 - March 4, 2011]
